# arc17

./: README.md
params/: param.yaml  param.yaml~
src/apc_nozel/: CMakeLists.txt  force.txt  package.xml  readme.txt  way_point_data.txt
src/apc_nozel/src/: actuator2.cpp  actuator_point_server2.cpp  actuator_point_server2_for_ur5.cpp  automate_v1.cpp  automate_v1_for_ur5.cpp  automate_v2.cpp  automate_v3.cpp  automate_v3_for_ur5.cpp  automate_v4.cpp  demo_actuator2.cpp  demo_actuator2_moveit.cpp  force.cpp  get_points_server2.cpp  joint_state_feedback.cpp  kinnect_frame2.cpp  publish_joint2.cpp  samarat_sir.cpp  test_actuator2.cpp  test_json.cpp  ur_communication.cpp
src/apc_nozel/srv/: actuator_frame2.srv  computer_vision.srv  get_points2.srv  gripper_suction_controller.srv  placement.srv
src/arc_controller/: CMakeLists.txt  package.xml
src/arc_controller/src/: arc_controller.cpp
src/arc_controller/srv/: camera_robot_calibration.srv  points.srv
src/caliberation/: CMakeLists.txt  package.xml  read_me.txt
src/caliberation/data_files/: final_R_and_T.txt  joint_angles.txt  marker_coordinates.txt  marker_coordinates.txt~  marker_coordinates_wrt_ee_link.txt  marker_coordinates_wrt_kinect.txt~
src/caliberation/include/caliberation/: apc_simulation.h
src/caliberation/src/: calculation_of_R_and_T.cpp  error_calculation.cpp  marker_wrt_wrist2_and_kinect_points_calib.cpp  store_marker_wrt_world_and_joint_angles.cpp  test.cpp  test_caliberation.cpp
src/iitk_tcs_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/iitk_tcs_moveit_config/config/: joint_limits.yaml~  ompl_planning.yaml  ur10.srdf
src/iitk_tcs_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur10_moveit_controller_manager.launch.xml  ur10_moveit_planning_execution.launch~  warehouse.launch
src/iitktcs_robot_description/description/ur10_ensenso_g2/: robo.urdf  ur10_ensenso_vgs.urdf.xacro  vgs.urdf.xacro~
src/iitktcs_robot_description/description/ur10_ensenso_g2_rotated/: arm_extras_ur10.urdf.xacro  ur10_ensenso_vgs.urdf.xacro  vgs.urdf.xacro
src/iitktcs_robot_description/description/ur10_ensenso_iitk/: arm_extras_ur10.urdf.xacro  robo.urdf  ur10_ensenso_vgs.urdf.xacro  vgs.urdf.xacro
src/iitktcs_robot_description/description/ur5_7joints_iitk_not_used/: arm_extras_ur5_iitk.urdf.xacro  ensenso_camera.urdf.xacro  readme  ur5_ensenso_vgs.urdf.xacro  vgs.urdf.xacro
src/iitktcs_robot_description/description/ur5_ensenso_iitk/: arm_extras_ur5_iitk.urdf.xacro  ensenso_camera.urdf.xacro  ur5_ensenso_vgs.urdf.xacro  vgs.urdf.xacro
src/iitktcs_robot_description/launch/: ur10_upload.launch~  ur5.launch  ur5_upload.launch
src/iitktcs_robot_description/meshes/gripper_design_1/: body_no_motors.dae  body_no_motors.stl  body_no_motors_new.stl  gripper_body.dae  gripper_body.stl  gripper_body_new.stl  left_gripper.dae  left_gripper.stl  left_gripper_new.stl  right_gripper.dae  right_gripper.stl  right_gripper_new.stl  schubert_bellow.stl  suction_rotation_11th_april.dae  suction_rotation_11th_april.stl  suction_rotation_11th_april_new.stl
src/iitktcs_robot_description/meshes/object_models/: Avery_Binder.stl  Band_Aid_Tape.stl  Burts_Bees_Baby_Wipes.stl  Colgate_Toothbrush_4PK.stl  Crayons.stl  Duct_Tape.stl  Epsom_Salts.stl  Flashlight.stl  Glue_Sticks.stl  Hand_Weight.stl  Reynolds_Wrap.stl  Scotch_Sponges.stl  Speed_Stick.stl  Tennis_Ball_Container.stl  Tissue_Box.stl  Windex.stl
src/json_maker/: CMakeLists.txt
src/json_maker/data/examples/: hiiiiiiiiiii.json  hiiiiiiiiiii.json~  item_location_file.json~  rp_input.json~  st_input.json~
src/json_maker/include/json_maker/: json_helper.h  json_helper_17.h
src/json_maker/launch/: param.launch~  param.yaml~
src/json_maker/src/: json_maker_node.cpp  json_reader_writer.cpp  json_reader_writer_17.cpp
src/publish_joint/: CMakeLists.txt  package.xml
src/publish_joint/src/: robot_joint_states.cpp
src/stow_class/: CMakeLists.txt  package.xml
src/stow_class/include/: bin.h  stowing.h  support.h
src/stow_class/launch/: param.launch
src/stow_class/src/: bin.cpp  main.cpp  main_stow.cpp  stowing.cpp  support.cpp
src/universal_robot-indigo-devel/ur10_moveit_config/config/: kinematics.yaml
src/universal_robot-indigo-devel/ur_description/meshes/storage/: rack_part.stl  tote.stl  tote_0mm.stl  tote_1mm.stl
src/universal_robot-indigo-devel/ur_description/urdf/: ur10.urdf.xacro
src/universal_robot-indigo-devel/ur_gazebo/launch/: ur10.launch  ur5.launch
src/universal_robot-indigo-devel/ur_gazebo/worlds/: ur10.world
src/ur_modern_driver-master/launch/: ur10_bringup.launch
src/ur_modern_driver-master/src/: ur_ros_wrapper.cpp
src/vgs_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/vgs_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ur10.srdf
src/vgs_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur10_moveit_controller_manager.launch.xml~  ur10_moveit_planning_execution.launch  warehouse.launch
